# plugin_compilation

./: .gitignore  README.md
communication/: CMakeLists.txt  package.json
communication/.cache/clangd/index/: GameOfLife.hh.83B43FBB73F41B2C.idx  Lenia.hh.05F5E59C63286A6D.idx  PLC.hh.FDEFFA916B4E510B.idx  WrapperGol.hh.CBF9B87D6145EA67.idx  WrapperInit.hh.BB5308A4E2DC7A54.idx  WrapperLenia.hh.1860178F3FEC1600.idx  init.cpp.94CA6E6BE0AB658C.idx  js_native_api.h.B92DE784F1860C2C.idx  js_native_api_types.h.05E6EDAABFBEA8FB.idx  napi-inl.deprecated.h.5AEAD450CEAB470B.idx  napi-inl.h.AB5049BE0B3B1FA4.idx  napi.h.69E4BD281F66A623.idx  node_api.h.95071381D94455C2.idx  node_api_types.h.3C71D3CEC7EA00AF.idx  wrapper_gol.cpp.AB84889B49C7DCDD.idx  wrapper_lenia.cpp.8CAE6B61F4D599AB.idx
communication/include/Wrappers/: WrapperGol.hh
communication/src/: init.cpp
gol/: CMakeLists.txt  package-lock.json
gol/.cache/clangd/index/: GameOfLife.cpp.3F6DE19A20294AF6.idx  GameOfLife.hh.26F27EF0C3ED9715.idx  PLC.hh.3ABC4C65E3F0A584.idx  WrapperGol.hh.A40BBF52D47509D1.idx  WrapperInit.hh.A1975DDF7C725269.idx  init.cpp.26263BF498EB13A9.idx  js_native_api.h.F70AF0628F9A855A.idx  js_native_api_types.h.FB9D49BC58962920.idx  napi-inl.deprecated.h.673E72D0E249FFDA.idx  napi-inl.h.E024AEC1CF1485CE.idx  napi.h.935A49A831DC02F0.idx  node_api.h.0DDF3974122674C9.idx  node_api_types.h.B8FB8046F21AB44A.idx  wrapper_gol.cpp.2E2FF430318DAB61.idx
gol/include/: WrapperInit.hh
gol/include/Plugin/: PLC.hh
gol/include/Plugins/: PLC.hh  Wolfram.hh
gol/src/: init.cpp
gol/src/Plugin/: GameOfLife.cpp
gol/src/Wrapper/: wrapper_gol.cpp
gol/src/Wrappers/: wrapper_gol.cpp
lenia/: .gitignore  CMakeLists.txt  package-lock.json  package.json
lenia/.cache/clangd/index/: Lenia.cpp.B5774A17EB30ED94.idx  Lenia.hh.CF608ACCD930E9D3.idx  PLC.hh.3682323076A8F4B7.idx  WrapperInit.hh.7161BADB93B1159A.idx  WrapperLenia.hh.9B902AC9BDB46066.idx  init.cpp.CC5717BF50B727C4.idx  js_native_api.h.A8AE2040C100212F.idx  js_native_api_types.h.7F4227C6284797E3.idx  napi-inl.deprecated.h.70C9CCC996463091.idx  napi-inl.h.EFA190A2B8256FA7.idx  napi.h.DCA4A832B93F049B.idx  (+3 more)
lenia/include/: WrapperInit.hh
lenia/include/Plugin/: Lenia.hh  PLC.hh
lenia/include/Plugins/: GameOfLife.hh
lenia/include/Wrapper/: WrapperLenia.hh
lenia/src/: init.cpp
lenia/src/Plugin/: Lenia.cpp
lenia/src/Wrapper/: wrapper_lenia.cpp
lenia/src/Wrappers/: wrapper_lenia.cpp
